
cmake_minimum_required(VERSION 3.21)
PROJECT(DocSpeak VERSION 1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(DEEP_SPEECH_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib/DeepSpeech)
set(DOCSPEACK_SRC ${CMAKE_CURRENT_SOURCE_DIR}/DocSpeak/src)

add_subdirectory(DocSpeak)